Fixed favourite icon in recipe aligned to the title

--- a/resources/scss/components/recipe/recipe.scss
+++ b/resources/scss/components/recipe/recipe.scss
@@ -85,7 +85,7 @@
         right: 0%;
         padding: .7rem;
         border-radius: 50%;
-        transform: translate(-50%, -250%);
+        transform: translate(-50%, -280%);
         z-index: 999;
     }
 
